lots of good progress

--- a/examples/blogs/static/index.html
+++ b/examples/blogs/static/index.html
@@ -5,7 +5,9 @@
     <title>Gestalt Blogs Example</title>
     <meta name="description" content="just another react + webpack boilerplate">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="/index.css" rel="stylesheet">
   </head>
   <body>
+    <script src='/index.js' type='text/javascript'></script>
   </body>
 </html>
